# ppxai

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SHELL_COMMAND_FEATURE.md  SPECIFICATIONS.md  SSL_FIX_SUMMARY.md  TESTING_RESULTS.md  TEST_FIXES_SUMMARY.md  build.bat  build.sh  perplexity_tools_prompt_based.py  ppxai-config.example.json  ppxai-config.json  ppxai.py  ppxai.spec  pyproject.toml  requirements.txt  test_perplexity_connection.py  tool_manager.py  tools.config.json.example
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
benchmarks/: latency-log.json
demo/: demo_tools_working.py  example_builtin_tool.py
demo/example_mcp_server/: README.md  index.js  package.json
docs/: INTEGRATION_SUMMARY.md  MCP_FIX_GUIDE.md  PROVIDER_SETUP.md  QUICK_START_TOOLS.md  README.md  TOOLS_README.md  TOOL_APPROACHES.md  TOOL_CREATION_GUIDE.md  TOOL_INTEGRATION.md  TOOL_INTEGRATION_COMPLETE.md  USER_TOOLS_GUIDE.md  alternatives-considered.md  architecture-refactoring.md  gemini-ide-analysis.md  ide-integration-plan.md  sse-migration-plan.md  uv-migration-plan.md
ppxai/: __init__.py  client.py  commands.py  config.py  main.py  prompts.py  server.py  ui.py  utils.py
ppxai/engine/: __init__.py  client.py  context.py  session.py  types.py
ppxai/engine/providers/: __init__.py  base.py  openai_compat.py  (+1 more)
ppxai/server/: __init__.py  __main__.py  http.py  jsonrpc.py
scripts/: benchmark.py  bootstrap.py  build-intel.sh
tests/: TEST_SUMMARY.md  __init__.py  test_all_tools.py  test_client.py  test_commands.py  test_config.py  test_custom_endpoint_integration.py  test_mcp.py  test_prompt_tools.py  test_prompts.py  test_shell_command_tool.py  test_utils.py
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
vscode-extension/src/: aiClient.ts  backend.ts  chatPanel.ts  config.ts  extension.ts  httpClient.ts  sessionsProvider.ts
(+9 files in other folders)
