[project]
name = "ppxai"
version = "1.9.1"
description = "Terminal UI for interacting with multiple AI providers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ppxai contributors" }
]
keywords = ["ai", "llm", "perplexity", "openai", "terminal", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# Server dependencies for HTTP + SSE (v1.9.0)
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

# MCP tool support
mcp = [
    "mcp>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

# Build dependencies
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
ppxai = "ppxai:main"
ppxai-server = "ppxai.server.http:run_server"

[project.urls]
Homepage = "https://github.com/rcconsult/ppxai"
Repository = "https://github.com/rcconsult/ppxai"
Documentation = "https://github.com/rcconsult/ppxai#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ppxai"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
